--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* style.css */
+
 body {
     font-family: 'Inter', sans-serif;
     line-height: 1.6;
@@ -39,7 +40,7 @@ h2 {
 .social-links svg {
     width: 24px;
     height: 24px;
-    fill: #7c0404;
+    fill: #9a6161;
 }
 
 .separator {
@@ -59,7 +60,7 @@ main p {
     top: 20px;
     right: 20px;
     z-index: 1001;
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     padding: 10px;
     border-radius: 5px;
 }
@@ -116,7 +117,7 @@ nav a {
 }
 
 .blog-post-date {
-    color: #7f8c8d;
+    color: #8d7f7f;
     font-size: 0.9em;
     margin-bottom: 10px;
 }
@@ -131,6 +132,59 @@ nav a {
     font-weight: bold;
 }
 
+/* New styles for image alignment */
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 40px;
+}
+
+.portfolio-card {
+    flex: 1 1 calc(33.333% - 20px);
+    box-sizing: border-box;
+    overflow: hidden;
+    position: relative;
+    padding-top: 40%; /* Change this value to make the images shorter (e.g., 40% for a shorter height) */
+}
+
+.portfolio-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.portfolio-info .caption h4 {
+    margin: 0;
+    font-size: 1em;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensure the image covers the container while maintaining aspect ratio */
+    border-radius: 8px;
+}
+
+/* Media queries for responsive design */
 @media (max-width: 768px) {
     body {
         padding: 15px;
@@ -182,5 +236,15 @@ nav a {
     }
     .separator {
         width: 50%;
+    }
+
+    /* Adjust image container for small screens */
+    .image-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .portfolio-card {
+        max-width: 90%;
+        margin-bottom: 20px;
     }
 }
